[package]
name = "api"
version = "0.1.0"
authors = ["Nattapon Pondongnok <nainatjab999@gmail.com>", "Patanasak Leksirimonti <patanasak.lek@mail.kmutt.ac.th>"] 
edition = "2018"

[dependencies]

# Web Framework
rocket = "0.4.6"
rocket_cors = { version = "0.5.1", default-features = false }

# Database
postgres = "0.19.0"

# Utility
dotenv = "0.15.0"
rand = "0.8.3"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]