[package]
name = "rust-url-shortener"
version = "0.1.0"
authors = ["Patanasak <patanasak.lek@,mail.kmutt.ac.th>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
urlshortener = "3.0.0"
rocket = "0.4.6"
rusqlite = { version = "*", features = ["bundled"] }
rocket_contrib = { version = "*", features = ["json"] }
base64 = "*"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "*"
reqwest = { version = "*", features= ["json", "rustls-tls"]}
chrono = { version = "*", features = ["serde"] }
state = { version = "0.4", features = ["tls"] }